# portfolio-website

./: .gitignore  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_INITAL_SCHEMA.sql
backend/src/: config.rs  main.rs
backend/src/db/: mod.rs  models.rs  repository.rs
backend/src/routes/: mod.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/lib/: router.ts
frontend/src/routes/: About.svelte  Blog.svelte  Home.svelte  Projects.svelte
