[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
async-trait = "0.1.89"
chrono = "0.4.44"
derive-getters = "0.5.0"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio" ] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = [ "v4", ] }
